[package]
name = "mission"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
description = "Robust HTML parser and CSS selector engine. Won't crash on bad HTML."
repository = "https://github.com/MerlijnW70/mission"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["html", "css-selectors", "parser", "html-to-text", "scraping"]
categories = ["parser-implementations", "text-processing", "command-line-utilities"]

# This crate has zero runtime dependencies — the table is intentionally empty.
[dependencies]

# The benchmark uses a std-only harness, so there are no dev-dependencies either.
[[bench]]
name = "parse"
harness = false
